platforms/vps-k8s/kustomize/base/apps/jitsi/deployment-prosody.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jitsi-prosody
  labels:
    app.kubernetes.io/name: jitsi-prosody
    app.kubernetes.io/component: xmpp
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jitsi-prosody
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jitsi-prosody
        app.kubernetes.io/component: xmpp
        ofc/network-jitsi: "true"
    spec:
      containers:
        - name: prosody
          image: jitsi/prosody:stable
          ports:
            - containerPort: 5222
            - containerPort: 5347
