platforms/vps-k8s/kustomize/base/apps/jitsi/deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jitsi-web
  labels:
    app.kubernetes.io/name: jitsi-web
    app.kubernetes.io/component: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jitsi-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jitsi-web
        app.kubernetes.io/component: web
        ofc/network: frontend
        ofc/network-jitsi: "true"
    spec:
      containers:
        - name: web
          image: jitsi/web:stable
          ports:
            - containerPort: 80
