platforms/vps-k8s/kustomize/base/apps/jitsi/service-jvb.yaml
apiVersion: v1
kind: Service
metadata:
  name: jitsi-jvb
  labels:
    app.kubernetes.io/name: jitsi-jvb
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: jitsi-jvb
  ports:
    - port: 10000
      targetPort: 10000
      protocol: UDP
      nodePort: 30000
