platforms/vps-k8s/kustomize/base/apps/jitsi/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: jitsi-web
  labels:
    app.kubernetes.io/name: jitsi-web
spec:
  selector:
    app.kubernetes.io/name: jitsi-web
  ports:
    - port: 80
      targetPort: 80
